--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="http://fonts.cdnfonts.com/css/gotham-pro" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
+    <link href="http://fonts.cdnfonts.com/css/monument-extended" rel="stylesheet">
+                
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"/>
 </head>
 <body>
