--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="header-image-wrapper">
             <div class="swiper-slide" >
-                <img src="./img/Photo.png" alt="">
+                <!-- <img src="./img/Photo.png" alt=""> -->
             </div>
             
         </div>
