--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <a href="#">Lifestyle</a>
         </div>
         <div class="navbar-wrapper-3">
-            <span><i class="fa fa-magnifying-glass"></i></span>
-            <span><i class="fa fa-cart-shopping"></i></span>
+            <span><a href="#"><i class="fa fa-magnifying-glass icon"></i></a></span>
+            <span><a href="#"><i class="fa fa-cart-shopping icon"></i></a></span>
             <span><a href="#">Menu</a></span>
         </div>
     </div>
@@ -53,7 +53,7 @@
         </div>
         <div class="header-image-wrapper">
             <div class="swiper-slide" >
-                <img src="./img/Photo.png" alt="">
+                <img src="./img/Photo.png" />
             </div>
             
         </div>
